<?php die() ?>
ContactUs 4.1.0
================================================================================
+ Minimum Joomla 4.2, PHP 7.4
~ Save and Save & Close buttons are now separate, as per Joomla 4.2 UI guidelines

ContactUs 4.0.5
================================================================================
# [HIGH] Add button in Categories page does nothing

ContactUs 4.0.4
================================================================================
+ Added custom module positions in the contact form
+ Add Show Inline Help support in component options for Joomla 4.1
# [HIGH] Immediate exception on Windows
# [HIGH] Unpublished contact categories can be selected in the frontend

ContactUs 4.0.3
================================================================================
# [LOW] PHP 8.1 Deprecated Notice in the Router

ContactUs 4.0.2
================================================================================
# [LOW] PHP Warning from the TriggerEvent mixin

ContactUs 4.0.1
================================================================================
# [HIGH] yet another last minute, undocumented, backwards incompatible change in Joomla is breaking things.

ContactUs 4.0.0
================================================================================
~ Rewritten with Joomla 4 core MVC

Contact Us 3.0.1
================================================================================
- GPG support (incompatible with PHP 8.0)
~ Converted all tables to InnoDB for better performance

Contact Us 3.0.0
================================================================================
+ Rewritten with FOF 4
+ Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)
+ Yes/No options in the component and plugin options now work correctly under Joomla 4.0 beta 7 and later

Contact Us 2.1.2
================================================================================
- Dropped support for PHP 7.1.0